--- a/nginx-conf/ningx.conf
+++ b/nginx-conf/ningx.conf
@@ -10,7 +10,7 @@ server
         index index.html;
     }
 
-    location /50x, html 
+    location /50x.html 
     {
         root /usr/share/nginx/html;
     }
